// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoodView when the user has registered should render the email as user 1`] = `
<HoodViewer
  canEdit={false}
  canUserVote={false}
  currentUserId=""
  edit={[Function]}
  handleDownvote={[Function]}
  handleUnvote={[Function]}
  handleUpvote={[Function]}
  hood={
    Object {
      "city": "Ann Arbor",
      "county": "Washtenaw",
      "createdAt": "2018-01-01",
      "id": "321",
      "name": "Da Hood",
      "state": "Michigan",
      "updatedAt": "2018-01-01",
      "userId": "123",
    }
  }
  hoodId="321"
  user={
    Object {
      "email": "eric@cool.com",
      "id": "123",
      "isTmp": false,
    }
  }
  userVoteType={null}
  userVoted={false}
  votes={0}
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-kpOJdX",
            "isStatic": true,
            "lastClassName": "gVPSAx",
            "rules": Array [
              "
  width: 90%;
  margin-top: 0.5rem;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-kpOJdX",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="gVPSAx"
      >
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-kGXeez",
                  "isStatic": true,
                  "lastClassName": "ffVuun",
                  "rules": Array [
                    "
  font-size: ",
                    "1rem",
                    ";
  color: ",
                    "#fff",
                    ";
  display: flex;
  align-items: center;
  margin-bottom: 0.6rem;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-kGXeez",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="ffVuun"
            >
              <styled.h1>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": true,
                        "lastClassName": "gxzuMa",
                        "rules": Array [
                          "
  font-size: ",
                          "1.3rem",
                          ";
",
                        ],
                      },
                      "displayName": "styled.h1",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "h1",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <h1
                    className="gxzuMa"
                  >
                    Hood Viewer
                  </h1>
                </StyledComponent>
              </styled.h1>
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-jzJRlG",
                        "isStatic": true,
                        "lastClassName": "kYcudh",
                        "rules": Array [
                          "
  display: flex;
  justify-content: space-between;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-jzJRlG",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="kYcudh"
                  />
                </StyledComponent>
              </styled.div>
            </div>
          </StyledComponent>
        </styled.div>
        <Styled(styled.div)>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-dnqmqq",
                  "isStatic": true,
                  "lastClassName": "dZFXYm",
                  "rules": Array [
                    "
  background-color: ",
                    "#fff",
                    ";
  border-radius: 0.3rem;
  padding: 0.6rem;
",
                    "
  display: flex;
",
                  ],
                },
                "displayName": "Styled(styled.div)",
                "foldedComponentIds": Array [
                  "sc-htoDjs",
                ],
                "render": [Function],
                "styledComponentId": "sc-dnqmqq",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="dZFXYm"
            >
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gFrDvL",
                        "rules": Array [
                          "
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="gFrDvL"
                  >
                    <styled.h1>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bdVaJa",
                              "isStatic": true,
                              "lastClassName": "gxzuMa",
                              "rules": Array [
                                "
  font-size: ",
                                "1.3rem",
                                ";
",
                              ],
                            },
                            "displayName": "styled.h1",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bdVaJa",
                            "target": "h1",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <h1
                          className="gxzuMa"
                        >
                          0
                        </h1>
                      </StyledComponent>
                    </styled.h1>
                  </div>
                </StyledComponent>
              </styled.div>
              <div
                style={
                  Object {
                    "width": "85%",
                  }
                }
              >
                <styled.h2>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bwzfXH",
                          "isStatic": true,
                          "lastClassName": "JiXRr",
                          "rules": Array [
                            "
  font-size: ",
                            "1.2rem",
                            ";
  margin-bottom: 0.5rem;
",
                          ],
                        },
                        "displayName": "styled.h2",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bwzfXH",
                        "target": "h2",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <h2
                      className="JiXRr"
                    >
                      Da Hood
                    </h2>
                  </StyledComponent>
                </styled.h2>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        User
                      </div>
                      <div>
                        eric@cool.com
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Last Updated
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Created
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
              </div>
            </div>
          </StyledComponent>
        </Styled(styled.div)>
      </div>
    </StyledComponent>
  </styled.div>
</HoodViewer>
`;

exports[`HoodView when the user is temporary should render \`Anonymous\` user name 1`] = `
<HoodViewer
  canEdit={false}
  canUserVote={false}
  currentUserId="123"
  edit={[Function]}
  handleDownvote={[Function]}
  handleUnvote={[Function]}
  handleUpvote={[Function]}
  hood={
    Object {
      "city": "Ann Arbor",
      "county": "Washtenaw",
      "createdAt": "2018-01-01",
      "id": "321",
      "name": "Da Hood",
      "state": "Michigan",
      "updatedAt": "2018-01-01",
      "userId": "123",
    }
  }
  hoodId="321"
  user={
    Object {
      "email": "123",
      "id": "123",
      "isTmp": true,
    }
  }
  userVoteType={null}
  userVoted={false}
  votes={0}
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-kpOJdX",
            "isStatic": true,
            "lastClassName": "gVPSAx",
            "rules": Array [
              "
  width: 90%;
  margin-top: 0.5rem;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-kpOJdX",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="gVPSAx"
      >
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-kGXeez",
                  "isStatic": true,
                  "lastClassName": "ffVuun",
                  "rules": Array [
                    "
  font-size: ",
                    "1rem",
                    ";
  color: ",
                    "#fff",
                    ";
  display: flex;
  align-items: center;
  margin-bottom: 0.6rem;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-kGXeez",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="ffVuun"
            >
              <styled.h1>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": true,
                        "lastClassName": "gxzuMa",
                        "rules": Array [
                          "
  font-size: ",
                          "1.3rem",
                          ";
",
                        ],
                      },
                      "displayName": "styled.h1",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "h1",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <h1
                    className="gxzuMa"
                  >
                    Hood Viewer
                  </h1>
                </StyledComponent>
              </styled.h1>
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-jzJRlG",
                        "isStatic": true,
                        "lastClassName": "kYcudh",
                        "rules": Array [
                          "
  display: flex;
  justify-content: space-between;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-jzJRlG",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="kYcudh"
                  />
                </StyledComponent>
              </styled.div>
            </div>
          </StyledComponent>
        </styled.div>
        <Styled(styled.div)>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-dnqmqq",
                  "isStatic": true,
                  "lastClassName": "dZFXYm",
                  "rules": Array [
                    "
  background-color: ",
                    "#fff",
                    ";
  border-radius: 0.3rem;
  padding: 0.6rem;
",
                    "
  display: flex;
",
                  ],
                },
                "displayName": "Styled(styled.div)",
                "foldedComponentIds": Array [
                  "sc-htoDjs",
                ],
                "render": [Function],
                "styledComponentId": "sc-dnqmqq",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="dZFXYm"
            >
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gFrDvL",
                        "rules": Array [
                          "
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="gFrDvL"
                  >
                    <styled.h1>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bdVaJa",
                              "isStatic": true,
                              "lastClassName": "gxzuMa",
                              "rules": Array [
                                "
  font-size: ",
                                "1.3rem",
                                ";
",
                              ],
                            },
                            "displayName": "styled.h1",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bdVaJa",
                            "target": "h1",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <h1
                          className="gxzuMa"
                        >
                          0
                        </h1>
                      </StyledComponent>
                    </styled.h1>
                  </div>
                </StyledComponent>
              </styled.div>
              <div
                style={
                  Object {
                    "width": "85%",
                  }
                }
              >
                <styled.h2>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bwzfXH",
                          "isStatic": true,
                          "lastClassName": "JiXRr",
                          "rules": Array [
                            "
  font-size: ",
                            "1.2rem",
                            ";
  margin-bottom: 0.5rem;
",
                          ],
                        },
                        "displayName": "styled.h2",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bwzfXH",
                        "target": "h2",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <h2
                      className="JiXRr"
                    >
                      Da Hood
                    </h2>
                  </StyledComponent>
                </styled.h2>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        User
                      </div>
                      <div>
                        Anonymous
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Last Updated
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bZQynM",
                          "isStatic": true,
                          "lastClassName": "dgcADw",
                          "rules": Array [
                            "
  font-size: ",
                            "0.8rem",
                            ";
  display: flex;
  justify-content: space-between;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bZQynM",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="dgcADw"
                    >
                      <div>
                        Created
                      </div>
                      <div>
                        12/31/2017 07:00 pm
                      </div>
                    </div>
                  </StyledComponent>
                </styled.div>
              </div>
            </div>
          </StyledComponent>
        </Styled(styled.div)>
      </div>
    </StyledComponent>
  </styled.div>
</HoodViewer>
`;
